<resources>
    <string name="app_name">FarmHub</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_email">Your email</string>
    <string name="question">Question</string>
    <string name="type_your_question_here">Type your question here</string>
    <string name="exit">Exit</string>
    <string name="fish_farming">fish farming</string>
    <string name="maize_farming">maize farming</string>
    <string name="farming_type">Farming type</string>
</resources>
