<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dark">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="10sp"
        tools:context="com.brybz.farmhub.MainActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/splash"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffff" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:textColor="#ffff"
                android:textColorHint="#A29D9D" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/your_phone_number"
                android:inputType="phone"
                android:textColor="#ffff"
                android:textColorHint="#A29D9D" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:textColor="#ffff"
                android:textColorHint="#A29D9D" />

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Enter your location"
                android:textColor="#ffff"
                android:textColorHint="#A29D9D" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/farming_type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffff" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButtonFish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/fish_farming"
                        android:textColor="#ffff" />

                    <RadioButton
                        android:id="@+id/radioButtonMaize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/maize_farming"
                        android:textColor="#ffff" />

                </RadioGroup>

            </RelativeLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/question"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffff" />

            <EditText
                android:id="@+id/editTextQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/type_your_question_here"
                android:inputType="textMultiLine"
                android:textColor="#ffff"
                android:textColorHint="#A29D9D" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="160dp"
                    android:layout_toRightOf="@+id/button"
                    android:padding="10sp"
                    android:text="@string/exit"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="#000000" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
